--- a/src/components/Admin/ProductCreate.css
+++ b/src/components/Admin/ProductCreate.css
@@ -1,6 +1,7 @@
 body{
     margin: auto;
     background-color: beige;
+    padding-bottom: 2em;
 }
 
 
@@ -8,41 +9,43 @@ body{
 display: flex;
 flex-direction: column;
 gap: .5em;
-padding-right: 30em;
-padding-left: 30em;
-margin-bottom: 4em;
+padding-right: 30vw;
+padding-left: 30vw;
+margin-bottom: 4vw;
 
 }
 
 #formImage, #formContent {
     display: flex;
     flex-direction: column;
-    gap: .5em;
+    gap: .5vw;
 }
 
 h2, p, h3{align-self: center;
 font-family: sans-serif;
 }
 
+h3, #logout{margin-left: 1vw;}
+
 h2{
 text-align: center;
-padding-top: 1em;}
+padding-top: 1vw;}
 
 #cards{
 display: flex;
 flex-wrap: wrap;
-gap: 5em;
+gap: 5vw;
 justify-content: center;}
 
 #modal{
-    padding-top: 5em;
-    padding-left: 15em;
-    padding-right: 15em;
+    padding-top: 5vw;
+    padding-left: 15vw;
+    padding-right: 15vw;
 }
 
-#formContent {padding: .25em;
+#formContent {padding: .25vw;
     background-color: beige}
 
 
-#button{margin-left: 25em; margin-right: 25em}
+#button{margin-left: 25vw; margin-right: 25vw}
 
