--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -24,3 +24,26 @@
     font-size: 45px;
     text-align: center;
 }
+
+.white-badge .MuiBadge-badge {
+    background-color: white;
+    color:#a04d31;
+}
+
+.checkout-container {
+  /* Set the background color of the small circle behind the shopping cart */
+  position: fixed;
+  z-index: 0;
+  border-radius: 50%;
+  background-color: #a04d31;
+  right: 2em;
+  top: 2em;
+}
+
+
+
+.cart {
+  /* Make the shopping cart icon sticky so that it moves with the page as you scroll */
+  position: sticky;
+  z-index: 2;
+}
