--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,25 +1,83 @@
-#footer
-{display: flex;
-    flex-direction: column;
-align-items: center;
-font-family: sans-serif;
-background-color: brown;
-column-gap: 0%;
+@font-face{
+    font-family: "Salsa-Regular";
+    src: url("src/fonts/salsa-regular.ttf") format("truetype")
+
 }
 
-h3, h4 {
+
+body {
+    margin: 0;
+    padding: 0; 
+    
+}
+
+#footerMain{
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    background-color:#a04d31;
+  
+}
+
+#footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    padding-right: 16vw;
+    gap: 5vw
+}
+
+#contactInfo, #email
+{
+    
+display: flex;
+flex-direction: column;
+align-items: center;
+font-family: "Salsa-Regular";
+column-gap: 0%;
+padding-bottom: 1vw;
+
+}
+
+h4 {
     line-height: 0;
+    font-family:"Arial";
+    color: #f5ede2;
 }
 
 button {
-    padding: 12x 24x;
     font-weight: bold;
     color: #ffffff;
     cursor: pointer;
     background-color: #E2725B ;
     transition: background-color 0.3s ease;
+    margin-bottom: 1vw;
+    
 }
 
 button:hover {
     background-color: brown;
 }
+
+img {
+
+height: 2vw;
+width: auto;}
+
+.divider {
+    position: absolute;
+    top: 25px;
+    bottom: 25px;
+    margin-right: 10vh;
+    border: 1px solid black;
+  }
+  
+  .divider1 {
+    position: absolute;
+    top: 25px;
+    bottom: 25px;
+    margin-left: 88vh;
+    border: 1px solid black;
+  }
