--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -25,7 +25,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     position: relative;
-    padding-right: 16vw;
+    padding-right: 23vw;
     gap: 5vw
 }
 
@@ -35,7 +35,7 @@ body {
 display: flex;
 flex-direction: column;
 align-items: center;
-font-family: "Salsa-Regular";
+font-family: "Arial";
 column-gap: 0%;
 padding-bottom: 1vw;
 
@@ -68,16 +68,16 @@ width: auto;}
 
 .divider {
     position: absolute;
-    top: 25px;
-    bottom: 25px;
-    margin-right: 10vh;
+    top: 5px;
+    bottom: 10px;
+    margin-left: 4vh;
     border: 1px solid black;
   }
   
   .divider1 {
     position: absolute;
-    top: 25px;
-    bottom: 25px;
-    margin-left: 88vh;
+    top: 5px;
+    bottom: 10px;
+    margin-left: 98vh;
     border: 1px solid black;
   }
