--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -25,7 +25,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     position: relative;
-    padding-right: 23vw;
+    padding-right: 15vw;
     gap: 5vw
 }
 
@@ -36,6 +36,7 @@ display: flex;
 flex-direction: column;
 align-items: center;
 font-family: "Arial";
+font-size: .8vw;
 column-gap: 0%;
 padding-bottom: 1vw;
 
@@ -54,6 +55,8 @@ button {
     background-color: #E2725B ;
     transition: background-color 0.3s ease;
     margin-bottom: 1vw;
+    height: 2.5vw;
+    width: 3.5vw;
     
 }
 
@@ -70,7 +73,7 @@ width: auto;}
     position: absolute;
     top: 5px;
     bottom: 10px;
-    margin-left: 4vh;
+    margin-right: 5%;
     border: 1px solid black;
   }
   
@@ -78,6 +81,13 @@ width: auto;}
     position: absolute;
     top: 5px;
     bottom: 10px;
-    margin-left: 98vh;
+    margin-left: 38%;
     border: 1px solid black;
   }
+
+  #instagramEmail{
+    display: flex;
+    flex-direction: row;
+    gap: 1vw;
+  }
+
