--- a/src/components/Admin/ProductCreate.css
+++ b/src/components/Admin/ProductCreate.css
@@ -9,9 +9,16 @@ body{
 display: flex;
 flex-direction: column;
 gap: .5em;
-padding-right: 30vw;
-padding-left: 30vw;
 margin-bottom: 4vw;
+padding-right: 36vw;
+padding-left: 35vw;
+
+}
+#login1, #forgot1{
+gap: .5em;
+padding-right: 14vw;
+padding-left: 14vw;
+font: 1vw Arial;
 
 }
 
@@ -49,3 +56,17 @@ justify-content: center;}
 
 #button{margin-left: 25vw; margin-right: 25vw}
 
+#sendEmail{
+    width: 28vw;
+    font: 1vw Arial;
+}
+
+#logout{
+    width: 15vw;
+    font: 1vw Arial;
+}
+
+#modalBtn{
+    width: 25vw;
+    align-self: center;
+}
