--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -48,21 +48,12 @@ h4 {
     color: #f5ede2;
 }
 
-button {
-    font-weight: bold;
-    color: #ffffff;
-    cursor: pointer;
+#btn {
     background-color: #E2725B ;
     transition: background-color 0.3s ease;
-    margin-bottom: 1vw;
-    height: 2.5vw;
-    width: 3.5vw;
-    
+    margin-bottom: .5vw;
 }
 
-button:hover {
-    background-color: brown;
-}
 
 img {
 
