--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,17 +5,15 @@
 }
 
 .logo{
-    width: 40vh;
-    height:40vh;
-    margin-top: 1em;
-    border-radius: 50%;
+    max-width: 40vw;
+    height:auto;;
+    
 }
 
 .container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:1em;
 }
 
 .title{
