--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: "Salsa-Regular";
-    src: url("src/fonts/salsa-regular.ttf") format("truetype")
+    src: url("../../fonts/salsa-regular.ttf") format("truetype")
 
 }
 
