--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -12,4 +12,85 @@
     gap: 1em;
     margin-bottom: 2em;
 }
+/* style cards so they match the style on the landing page and full image is viewable */
+.cart-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+    height: 100%;
+    margin: 0 auto;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: beige;
+}
+.cart-card img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.cart-card h3{
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
+}
+.cart-card p{
+    font-size: 1em;
+    text-align: center;
+}
+.cart-card button{
+    font-size: 1em;
+    padding: .5em;
+    border-radius: 5px;
+}
+.cart-card button:hover{
+    background-color: #f0d060;
+}
+.cart-card button a{
+    color: black;
+    text-decoration: none;
+}
+.cart-card button a i{
+    font-size: 1em;
+    padding-right: .5em;
+}
+.cart-card button a i span{
+    font-size: 1em;
+    padding-right: .5em;
+}
+.cart-card button a i span span{
+    font-size: 1em;
+    padding-right: .5em;
+}
+.cart-card button a i span span span{
+    font-size: 1em;
+    padding-right: .5em;
+}
+.cart-card button a i span span span span{
+    font-size: 1em;
+    padding-right: .5em;
+}
+.cart-card button a i span span span span span{
+    font-size: 1em;
+    padding-right: .5em;
+}
+.cart-card button a i span span span span span span{
+    font-size: 1em;
+    padding-right: .5em;
+}
+.cart-card button a i span span span span span span span{
+    font-size: 1em;
+    padding-right: .5em;
+}
+.cart-card button a i span span span span span span span span{
+    font-size: 1em;
+    padding-right: .5em;
+}
+.cart-card button a i span span span span span span span span span{
+    font-size: 1em;
+    padding-right: .5em;
+}
+
+
 
