--- a/src/components/LandingPage/ProductPage.css
+++ b/src/components/LandingPage/ProductPage.css
@@ -1,5 +1,6 @@
 .product-img{
     width: 20%;
+    border-radius: .5rem;
 }
 .single-product{
     display: flex;
@@ -8,6 +9,18 @@
     justify-content: center;
     width: 100%;
     margin-top: 5rem;
+    padding: 20px;
+}
+.productContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    border-radius: .8rem;
+    width: 65%;
+    background-color: #d99b82;
 }
 #img-container{
     display: flex;
@@ -15,4 +28,67 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+
+}
+/* Style product page like cart page */
+
+/* Mobile styling */
+@media (max-width: 768px) {
+    .product-img{
+        width: 50%;
+    }
+    .productContainer{
+        width: 100%;
+    }
+    .productContainer > div {
+        width: 100%;
+    }
+    .productContainer > div > div {
+        width: 100%;
+    }
+    .productContainer > div > div > img {
+        width: 100%;
+    }
+    .productContainer > div > div > div {
+        width: 100%;
+    }
+    .productContainer > div > div > div > h3 {
+        font-size: 1.5rem;
+    }
+    .productContainer > div > div > div > p {
+        font-size: 1rem;
+    }
+    .productContainer > div > div > div > button {
+        font-size: 1rem;
+    }
+    .productContainer > div > div > div > button > a {
+        font-size: 1rem;
+    }
+    .productContainer > div > div > div > button > a > i {
+        font-size: 1rem;
+    }
+    .productContainer > div > div > div > button > a > i > span {
+        font-size: 1rem;
+    }
+    .productContainer > div > div > div > button > a > i > span > span {
+        font-size: 1rem;
+    }
+    .productContainer > div > div > div > button > a > i > span > span > span {
+        font-size: 1rem;
+    }
+    .productContainer > div > div > div > button > a > i > span > span > span > span {
+        font-size: 1rem;
+    }
+    .productContainer > div > div > div > button > a > i > span > span > span > span > span {
+        font-size: 1rem;
+    }
+    .productContainer > div > div > div > button > a > i > span > span > span > span > span > span {
+        font-size: 1rem;
+    }
+    .productContainer > div > div > div > button > a > i > span > span > span > span > span > span > span {
+        font-size: 1rem;
+    }
+    .productContainer > div > div > div > button > a > i > span > span > span > span > span > span > span > span {
+        font-size: 1rem;
+    }
 }
